--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marble-seeds/backend-module-template",
+  "name": "@marble-seeds/schema",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/latteware/marble-backend-module-template.git"
+    "url": "git+https://github.com/latteware/marble-schema.git"
   },
   "author": "Siedrix",
   "license": "MIT",
