--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marble-seeds/schema",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,6 @@
     "test"
   ],
   "dependencies": {
-    "json-schema-library": "^7.1.0"
+    "joi": "^17.6.2"
   }
 }
